--- a/isa-slajdovi.tex
+++ b/isa-slajdovi.tex
@@ -27,6 +27,7 @@ Novom Sadu}
 \frame{
   \frametitle{Sajt predmeta}
   \begin{center}
+    \Large{\url{https://enastava.io}}
     \Large{\url{http://www.informatika.ftn.ns.ac.yu/ISA}}
   \end{center}
 }
@@ -35,6 +36,7 @@ Novom Sadu}
   \begin{itemize}
     \item Branko Milosavljević, TMD 120 \\ \texttt{mbranko@uns.ac.rs}
     \item Igor Cverdelj-Fogaraši, TMD 15A \\ \texttt{igor.fogarasi@uns.ac.rs}
+    \item Željko Ivković, TMD 16 \\ \texttt{zeljkoi@uns.ac.rs}
   \end{itemize}
 }
 \frame{
