--- a/isa-slajdovi.tex
+++ b/isa-slajdovi.tex
@@ -1739,7 +1739,7 @@ public class Students {
   \frametitle{JPA i prirodni ključevi}
   \begin{itemize}
     \item Ako prirodni ključ čini jedno obeležje, on se označava sa @Id, kao i ranije
-    \item Ako ima više obeležja u ključu, mora se napraviti posebna ,,PK`` klasa
+    \item Ako ima više obeležja u ključu, mora se napraviti posebna PK klasa
     \item Atribut tipa PK klase se dodaje u osnovnu klasu i označava sa @EmbeddedId
   \end{itemize}
 
@@ -1804,6 +1804,300 @@ public class Students {
     \item Komunikacija preko \textbf{topic} mehanizma
     \item Primer 24 -- isa.pr24.topic.*
   \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{MDB i queue/topic}
+  \begin{itemize}
+    \item Komunikacija preko \textbf{queue} mehanizma
+    \item Primer 24 -- isa.pr24.queue.*
+  \end{itemize}
+  
+  \begin{itemize}
+    \item Komunikacija preko \textbf{topic} mehanizma
+    \item Primer 24 -- isa.pr24.topic.*
+  \end{itemize}
+\end{frame}
+
+\section[WS]{WebSockets}
+
+\begin{frame}
+  \frametitle{WebSocket}
+  \begin{itemize}
+    \item RFC 6455
+    \item dvosmerna komunikacija preko više kanala kroz jednu TCP vezu
+  \end{itemize}  
+\end{frame}
+
+\begin{frame}
+  \frametitle{Klasičan HTTP}
+  \begin{itemize}
+    \item dizajniran za prenos dokumenata
+    \begin{itemize}
+      \item interakcija zahtev/odgovor
+    \end{itemize}  
+    \item dvosmerna ali half-duplex komunikacija
+    \begin{itemize}
+      \item samo u jednom smeru u jednom trenutku
+    \end{itemize}  
+    \item stateless
+    \begin{itemize}
+      \item višak u headeru
+      \item podaci se šalju u svakom zahtevu i odgovoru
+    \end{itemize}  
+  \end{itemize}  
+\end{frame}
+
+\begin{frame}
+  \frametitle{Full duplex vs half duplex}
+  \begin{itemize}
+    \item \mygreen{full duplex}: komunikacija u oba smera \textbf{istovremeno}
+    \item \mygreen{half duplex}: komunikacija u oba smera, ali samo u jednom smeru u jednom trenutku
+  \end{itemize}  
+\end{frame}
+
+\begin{frame}
+  \frametitle{AJAX folira full duplex vezu}
+  \begin{itemize}
+    \item AJAX: Asynchronous JavaScript and XML
+    \item sadržaj može da se menja bez osvežavanja cele stranice
+    \item stvara utisak brzog odziva
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{AJAX trik \#1: polling}
+  \begin{itemize}
+    \item nakon inicijalnog preuzimanja stranice
+    \item browser šalje zahteve u regularnim intervalima
+    \item i odmah prima odgovor
+    \item skoro real-time
+  \end{itemize}
+  \begin{center}
+    \includegraphics[width=6cm]{polling.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{AJAX trik \#2: long polling}
+  \begin{itemize}
+    \item server kasnije šalje odgovor
+    \item browser odmah šalje novi zahtev
+    \item ciklus odgovor-zahtev-odgovor
+  \end{itemize}
+  \begin{center}
+    \includegraphics[width=6cm]{long-polling.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{AJAX trik \#3: streaming }
+  \begin{itemize}
+    \item server šalje odgovor u delovima
+    \item problemi sa proxy i firewall sistemima
+    \item potreban periodičan flush
+    \item ograničen broj otvorenih veza u browseru
+  \end{itemize}
+  \begin{center}
+    \includegraphics[width=6cm]{streaming.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{AJAX folira full duplex vezu}
+  \begin{itemize}
+    \item sadržaj može da se menja bez osvežavanja cele stranice
+    \item stvara utisak brzog odziva
+    \item \mygreen{polling} je skoro real-time
+    \begin{itemize}
+      \item browser šalje zahteve u regularnim intervalima
+      \item i odmah prima odgovor
+    \end{itemize}  
+  \end{itemize}
+  \begin{center}
+    \includegraphics[width=6cm]{polling.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Višak u HTTP headeru}
+\begin{center}
+\begin{tabular}{l|r|r}
+\textbf{br.klijenata} & \textbf{bajtova viška} & \textbf{Mbps viška} \\ \hline \hline
+1.000 & 871.000 & ~6,6 \\ \hline
+10.000 & 8.710.000 & ~66 \\ \hline
+100.000 & 87.100.000 & ~665 \\ \hline
+\end{tabular}
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{WebSockets vs AJAX}
+  \begin{itemize}
+    \item AJAX: otvara TCP vezu, šalje HTTP zahtev, uključuje rezultat u DOM stablo
+    \item WebSocket: slanje podataka server$\rightarrow$klijent bez prethodnog 
+    slanja zahteva klijent$\rightarrow$server
+    \item push notifications \\
+      \includegraphics[width=3cm]{facebook.png}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{WebSocket istorija}
+  \begin{itemize}
+    \item originalno dodat u HTML5 kao \texttt{TCPConnection}
+    \item kasnije izdvojen u posebnu specifikaciju
+    \item W3C API i IETF protokol
+    \item dve šeme: \texttt{ws://} i \texttt{wss://}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile,shrink=10]
+  \frametitle{WebSocket API}
+\begin{verbatim}
+if (window.WebSocket) { ... }
+
+var ws = new WebSocket("ws://www.xyz.com")
+ws.onopen = function(event) { };
+ws.onclose = function(event) { 
+  alert("closed with status: " + event.code);
+};
+ws.onmessage = function(event) { 
+  alert("received msg: " + event.data);
+};
+ws.onerror = function(event) { 
+  alert("error");
+};
+// ...
+ws.send("Hello world");
+// ...
+ws.close();
+\end{verbatim}
+\end{frame}
+
+\begin{frame}
+  \frametitle{WebSocket API}
+\begin{center}
+\begin{tabular}{l|l}
+dostupno? & \texttt{window.WebSocket} ili \texttt{Modernizr.websocket} \\ \hline
+događaji & \texttt{onopen}, \texttt{onmessage}, \texttt{onclose}, \texttt{onerror} \\ \hline
+funkcije & \texttt{send}, \texttt{close} \\ \hline
+atributi & \texttt{url}, \texttt{readyState}, \texttt{bufferedAmount}, ... \\ \hline
+\end{tabular}
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Podrška u browserima}
+  \begin{itemize}
+    \item Chrome 4+
+    \item Safari 5+
+    \item Firefox 4+
+    \item Opera 10.7+
+    \item Internet Explorer 10+
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile,shrink=10]
+  \frametitle{WebSocket server-side API}
+\begin{verbatim}
+@ServerEndpoint("/echo") 
+public class EchoServer {
+
+  @OnOpen
+  public void onOpen(Session session){
+    session.getBasicRemote().sendText("Hello!");
+  }
+ 
+  @OnMessage
+  public void onMessage(String message, Session session){
+    session.getBasicRemote().sendText("Echo: " + message);
+  }
+
+  @OnClose
+  public void onClose(Session session){
+  }
+}
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{WebSocket handshake: zahtev klijenta}
+\begin{verbatim}
+GET /chat HTTP/1.1
+Host: xyz.com
+Upgrade: websocket
+Connection: Upgrade
+Sec-WebSocket-Key: x3JJHMbDL1EzLkh9GBhXDw==
+Sec-WebSocket-Version: 13
+--- (opciono) ---
+Origin: http://xyz.com
+Sec-WebSocket-Protocol: chat
+Sec-WebSocket-Extensions: ...
+Cookie: ...
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{WebSocket handshake: odgovor servera}
+\begin{verbatim}
+HTTP/1.1 101 Switching Protocols
+Upgrade: websocket
+Connection: Upgrade
+Sec-WebSocket-Accept: HSmrc0sMlYUkAGmm5OPpG2HaGWk=
+--- (opciono) ---
+Sec-WebSocket-Protocol: chat
+Sec-WebSocket-Extensions: ...
+\end{verbatim}
+\end{frame}
+
+\begin{frame}
+  \frametitle{WebSocket frejm}
+  \begin{itemize}
+    \item nekoliko bajtova headera
+    \item tekstualni ili binarni podaci
+  \end{itemize}
+\begin{center}
+  \includegraphics[width=11cm]{WebSocketFrame.png}
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Efikasnost}
+\begin{center}
+\begin{tabular}{l|l|l}
+ & HTTP & WebSocket \\ \hline \hline
+overhead & 100-tine B & 2-6 B \\ \hline
+odziv & nova konekcija & ista konekcija \\ \hline
+polling & interval & bez čekanja \\ \hline
+long polling & odgovor-zahtev & bez čekanja
+\end{tabular}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Overhead: Polling vs WebSockets}
+\begin{center}
+  \includegraphics[width=10cm]{comparison.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Latency: Polling vs WebSockets}
+\begin{center}
+  \includegraphics[width=10cm]{latency-comparison.png}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{WebSocket prednosti}
+\begin{itemize}
+  \item \textbf{performanse}: efikasna real-time komunikacija
+  \item \textbf{jednostavnost}: prosta klijent/server komunikacija preko weba
+  \item \textbf{standardizacija}: WebSocket je standardni IETF protokol
+  \item \textbf{HTML5}: deo HTML5 specifikacije
+\end{itemize}
+
 \end{frame}
 
 \end{document}
