--- a/isa-slajdovi.tex
+++ b/isa-slajdovi.tex
@@ -27,25 +27,22 @@ Novom Sadu}
 \frame{
   \frametitle{Sajt predmeta}
   \begin{center}
-    \Large{\url{https://enastava.io}}
-    \Large{\url{http://www.informatika.ftn.ns.ac.yu/ISA}}
+    \Large{\url{https://enastava.ftninformatika.com}}
   \end{center}
 }
 \frame{
   \frametitle{Ko drži nastavu}
   \begin{itemize}
-    \item Branko Milosavljević, TMD 120 \\ \texttt{mbranko@uns.ac.rs}
-    \item Igor Cverdelj-Fogaraši, TMD 15A \\ \texttt{igor.fogarasi@uns.ac.rs}
-    \item Željko Ivković, TMD 16 \\ \texttt{zeljkoi@uns.ac.rs}
+    \item Branko Milosavljević, JUG-213 \\ \texttt{mbranko@uns.ac.rs}
+    \item Milan Stojkov, JUG-108 \\ \texttt{stojkovm@uns.ac.rs}
   \end{itemize}
 }
 \frame{
   \frametitle{Ispitne obaveze}
   \begin{itemize}
-    \item Odbranjen projektni zadatak posle ovog semestra
+    \item Predispitna obaveza
     \begin{itemize}
-      \item odbranjen projekat važi trajno
-      \item mora se odbraniti do kraja sledećeg zimskog semestra; posle toga zadatak se menja
+      \item odbranjen projekat na kraju semestra
     \end{itemize}
     \item Usmeni ispit
   \end{itemize}
